add fontawesome font + rename colors variables

--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -1,4 +1,4 @@
-$colors-primary: #19d764;
-$colors-primary-dark: #108940;
-$colors-secondary: #f00000;
-$colors-secondary-dark: #990000;
+$color-primary: #19d764;
+$color-primary-dark: #108940;
+$color-secondary: #f00000;
+$color-secondary-dark: #990000;
