--- a/src/assets/scss/globals/general.scss
+++ b/src/assets/scss/globals/general.scss
@@ -12,6 +12,12 @@ body {
   font-size: 1.6rem;
 }
 
+main {
+  height: 100vh;
+  width: 100%;
+  padding: calc(#{$measure-height-header} + 20px) $measure-padding-general;
+}
+
 h1 {
   font-size: 2.4rem;
 }
