implement Menu un Header

--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -2,3 +2,4 @@ $color-primary: #19d764;
 $color-primary-dark: #108940;
 $color-secondary: #f00000;
 $color-secondary-dark: #990000;
+$color-overlay: rgba(#000, 0.4);
