added LICENSE and formatted the code

--- a/src/assets/scss/globals/fontawesome.scss
+++ b/src/assets/scss/globals/fontawesome.scss
@@ -4,8 +4,8 @@
  */
 
 @font-face {
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
   font-weight: 900;
-  src: url('/static/fonts/fa-solid-900.woff2') format('woff2');
+  src: url("/static/fonts/fa-solid-900.woff2") format("woff2");
 }
