--- a/src/assets/scss/globals/general.scss
+++ b/src/assets/scss/globals/general.scss
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 1.6rem;
 }
 
