--- a/src/assets/scss/globals/index.scss
+++ b/src/assets/scss/globals/index.scss
@@ -1,3 +1,3 @@
-@import './globals/reset.scss';
-@import './globals/general.scss';
-@import './globals/fontawesome.scss';
+@import "./globals/reset.scss";
+@import "./globals/general.scss";
+@import "./globals/fontawesome.scss";
