--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,3 @@
-@import './globals/index.scss';
-@import './variables/index.scss';
-@import './mixins/index.scss';
+@import "./variables/index.scss";
+@import "./mixins/index.scss";
+@import "./globals/index.scss";
