--- a/src/assets/scss/variables/index.scss
+++ b/src/assets/scss/variables/index.scss
@@ -1,3 +1,3 @@
-@import './colors.scss';
-@import './icons.scss';
-@import './measures.scss';
+@import "./colors.scss";
+@import "./icons.scss";
+@import "./measures.scss";
