--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -3,3 +3,5 @@ $color-primary-dark: #108940;
 $color-secondary: #f00000;
 $color-secondary-dark: #990000;
 $color-overlay: rgba(#000, 0.4);
+$color-grey-main: #f2f2f2;
+$color-blue-light: #e6f0ff;
